<resources>
    <string name="app_name">Health Track</string>
    <string name="patient_list">Patient List</string>
    <string name="patient_symptom">Patient Symptoms</string>
    <string name="symptom_list">Symptom List</string>
    <string name="add_symptoms">Add ICPC2 Symptoms</string>
    <string name="add_doctor">Add Doctor</string>
    <string name="remove_doctor">Remove Doctor</string>
    <string name="doctor_list">Doctor List</string>
    <string name="remove_symptom">Remove All Symptoms</string>
    <string name="PatientList">Doctor Patient List</string>
    <string name="app_name_doctor">Health Track - Doctor</string>
    <string name="app_name_info">Health Track - Info</string>
    <string name="app_name_info1">Here you will find valuable info about our app, and the changelog:</string>
    <string name="app_name_register">Health Track - Register</string>
    <string name="app_name_login">Health Track - Login</string>
    <string name="app_name_patient">Health Track - Patient</string>
    <string name="choose_doctor">Choose a doctor</string>
    <string name="full_name">full name</string>
    <string name="email">email</string>
    <string name="bdate">birth date</string>
    <string name="pick_bdate">Pick Date</string>
    <string name="sex">Sex</string>
    <string name="password">password</string>
    <string name="phone">phone</string>
    <string name="register">Register</string>
    <string name="add_symptom">Add Symptom</string>
    <string name="add_symptom1">Add Symptoms</string>
    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">phone required</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="input_error_bdate">dont forget your birth date</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="registration_fail">Registered Failed</string>
    <string name="input_error_email_invalid">enter a valid email</string>
    <string name="input_error_age_invalid">enter a valid age</string>
    <string name="SignUp">    Don\'t have an account? Sign up.</string>
    <string name="textViewType">Welcome to our Health Tracking app.</string>
    <string name="button_login">Log In</string>
    <string name="button_info">App Information</string>
    <string name="button_doctor">Doctor</string>
    <string name="button_patient">Patient</string>
    <string name="SignIn">    Already have an account? Sign in.</string>
    <string name="ICD10">Enter first ICPC2 code related to Symptom.</string>
    <string name="ICD10i">Enter second ICPC2 code related to Symptom.</string>
    <string name="comments">Enter any comments here:</string>
    <string name="app_info">This application is simple. If you are a doctor, have your patients install this app, and install it to your cellphone too. Register as a doctor using the Register button and you will automatically login. Your screen will be empty for now. Until, as a patient, someone selects you as their doctor. They can see you in the select doctor screen, and if they select you, you can view them in your logged in state. Click them and, if they have selected symptoms, you can view them. As a patient, you can delete all your symptoms together or, long click one to specifically delete it. As a doctor you can click an a patients phone number to call him.</string>
    <string name="changelog">Changelog:</string>
    <string name="editprofile">Edit Profile:</string>
    <string name="save">Save</string>
    <string-array name="sex_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="type_array">
        <item>Doctor</item>
        <item>Patient</item>
    </string-array>
    <string-array name="clinic_array">
        <item>Tzaneio Piraeus</item>
        <item>Metropolitan</item>
        <item>KAT</item>
        <item>Iaso</item>
        <item>Metaxa</item>
        <item>Kratiko Nikaias</item>
    </string-array>
    <string-array name="ICPC2_array">
        <item>A - General and Unspecified</item>
        <item>B - Blood, Blood Forming Organs, Immune Mechanism</item>
        <item>D - Digestive</item>
        <item>F - Eye</item>
        <item>H - Ear</item>
        <item>K - Cardiovascular</item>
        <item>L - Musculoskeletal</item>
        <item>N - Neurological</item>
        <item>P - Psychological</item>
        <item>R - Respiratory</item>
        <item>S - Skin</item>
        <item>T - Endocrine/Metabolic and Nutritional</item>
        <item>U - Urological</item>
        <item>W - Pregnancy, Childbearing, Family Planning</item>
        <item>X - Female Genital</item>
        <item>Y - Male Genital</item>
        <item>Z - Social Problems</item>
    </string-array>
    <string-array name="A">
        <item>A01 - Pain general/multiple sites</item>
        <item>A02 - Chills</item>
        <item>A03 - Fever</item>
        <item>A04 - Weakness/tiredness general</item>
        <item>A05 - Feeling ill</item>
        <item>A06 - Fainting/syncope</item>
        <item>A07 - Coma</item>
        <item>A08 - Swelling</item>
        <item>A09 - Sweating problem</item>
        <item>A10 - Bleeding/haemorrhage NOS</item>
        <item>A11 - Chest pain NOS</item>
        <item>A13 - Concern about/fear of medical treatment</item>
        <item>A16 - Irritable infant</item>
        <item>A18 - Concern about appearance</item>
        <item>A20 - Euthanasia request/discussion</item>
        <item>A21 - Risk factor for malignancy</item>
        <item>A23 - Risk factor NOS</item>
        <item>A25 - Fear of death/dying</item>
        <item>A26 - Fear of cancer, NOS</item>
        <item>A27 - Fear of other disease NOS</item>
        <item>A28 - Limited function/disability NOS</item>
        <item>A29 - General symptom/complaint other</item>
        <item>A70 - Tuberculosis</item>
        <item>A71 - Measles</item>
        <item>A72 - Chickenpox</item>
        <item>A73 - Malaria</item>
        <item>A74 - Rubella</item>
        <item>A75 - Infectious mononucleosis</item>
        <item>A76 - Viral exanthem other</item>
        <item>A77 - Viral disease other/NOS</item>
        <item>A78 - Infectious disease other/NOS</item>
        <item>A79 - Malignancy NOS</item>
        <item>A80 - Trauma/injury NOS</item>
        <item>A81 - Multiple trauma/injuries</item>
        <item>A82 - Secondary effect of trauma</item>
        <item>A84 - Poisoning by medical agent</item>
        <item>A85 - Adverse effect medical agent</item>
        <item>A86 - Toxic effect non-medicinal substance</item>
        <item>A87 - Complication of medical treatment</item>
        <item>A88 - Adverse effect physical factor</item>
        <item>A89 - Effect prosthetic device</item>
        <item>A90 - Congenital anomaly nos/multiple</item>
        <item>A91 - Abnormal result investigation NOS</item>
        <item>A92 - Allergy/allergic reaction NOS</item>
        <item>A93 - Premature newborn</item>
        <item>A94 - Perinatal morbidity other</item>
        <item>A95 - Perinatal mortality</item>
        <item>A96 - Death</item>
        <item>A97 - No disease</item>
        <item>A98 - Health maintenance/preventive medicine</item>
        <item>A99 - Disease/condition unspecnature/site</item>
    </string-array>
    <string-array name="B">
        <item>B02 - Lymph gland(s) enlarged/painful</item>
        <item>B04 - Blood symptom/complaint</item>
        <item>B25 - Fear of AIDS/HIV</item>
        <item>B26 - Fear of cancer blood/lymph</item>
        <item>B27 - Fear of blood/lymph disease other</item>
        <item>B28 - Limited function/disability (B)</item>
        <item>B29 - Lymph/immune mechanism symptom/complaint other</item>
        <item>B70 - Lymphadenitis acute</item>
        <item>B71 - Lymphadenitis chronic/non-specific</item>
        <item>B72 - Hodgkin Lymphoma</item>
        <item>B73 - Leukaemia - Leukaemia</item>
        <item>B74 - Malignant neoplasm blood other</item>
        <item>B75 - Neoplasm blood benign/unspecified</item>
        <item>B76 - Ruptured spleen traumatic</item>
        <item>B77 - Injury blood/lymph/spleen other</item>
        <item>B78 - Hereditary haemolytic anaemia</item>
        <item>B79 - Congenital anomaly blood/lymph other</item>
        <item>B80 - Iron deficiency anaemia</item>
        <item>B81 - Anaemia vit B12/folate deficiency</item>
        <item>B82 - Anaemia other/unspecified</item>
        <item>B83 - Purpura/coagulation defect</item>
        <item>B84 - Unexplained abnormal white cells</item>
        <item>B87 - Splenomegaly</item>
        <item>B90 - HIV-infection/AIDS</item>
        <item>B99 - Blood/lymph/spleen disease other</item>
    </string-array>
    <string-array name="D">
        <item>D01 - Abdominal pain/cramps general</item>
        <item>D02 - Abdominal pain epigastric</item>
        <item>D03 - Heartburn</item>
        <item>D04 - Rectal/anal pain</item>
        <item>D05 - Perianal itching</item>
        <item>D06 - Abdominal pain localized other</item>
        <item>D07 - Dyspepsia/indigestion</item>
        <item>D08 - Flatulence/gas/belching</item>
        <item>D09 - Nausea</item>
        <item>D10 - Vomiting</item>
        <item>D11 - Diarrhoea</item>
        <item>D12 - Constipation</item>
        <item>D13 - Jaundice</item>
        <item>D14 - Haematemesis/vomiting blood</item>
        <item>D15 - Melaena</item>
        <item>D16 - Rectal bleeding</item>
        <item>D17 - Incontinence of bowel</item>
        <item>D18 - Change in faeces/bowel movements</item>
        <item>D19 - Teeth/gum symptom/complaint</item>
        <item>D20 - Mouth/tongue/lip symptom/complaint</item>
        <item>D21 - Swallowing problem</item>
        <item>D23 - Hepatomegaly</item>
        <item>D24 - Abdominal mass NOS</item>
        <item>D25 - Abdominal distension</item>
        <item>D26 - Fear of cancer of digestive system</item>
        <item>D27 - Fear of digestive disease other</item>
        <item>D28 - Limited function/disability</item>
        <item>D29 - Digestive symptom/complaint other</item>
        <item>D70 - Gastrointestinal infection</item>
        <item>D71 - Mumps</item>
        <item>D72 - Viral hepatitis</item>
        <item>D73 - Gastroenteritis presumed infection</item>
        <item>D74 - Malignant neoplasm stomach</item>
        <item>D75 - Malignant neoplasm colon/rectum</item>
        <item>D76 - Malignant neoplasm pancreas</item>
        <item>D77 - Malignant digestive neoplasm other/NOS</item>
        <item>D78 - Neoplasm digestive system benign/unspecified</item>
        <item>D79 - Foreign body digestive system</item>
        <item>D80 - Injury digestive system other</item>
        <item>D81 - Congenital anomaly digestive system</item>
        <item>D82 - Teeth/gum disease</item>
        <item>D83 - Mouth/tongue/lip disease</item>
        <item>D84 - Oesophagus disease</item>
        <item>D85 - Duodenal ulcer</item>
        <item>D86 - Peptic ulcer other</item>
        <item>D87 - Stomach function disorder</item>
        <item>D88 - Appendicitis</item>
        <item>D89 - Inguinal hernia</item>
        <item>D90 - Hiatus hernia</item>
        <item>D91 - Abdominal hernia other</item>
        <item>D92 - Diverticular disease</item>
        <item>D93 - Irritable bowel syndrome</item>
        <item>D94 - Chronic enteritis/ulcerative colitis</item>
        <item>D95 - Anal fissure/perianal abscess</item>
        <item>D96 - Worms/other parasites</item>
        <item>D97 - Liver disease NOS</item>
        <item>D98 - Cholecystitis/cholelithiasis</item>
        <item>D99 - Disease digestive system other</item>
    </string-array>
</resources>