<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context="gr.unipi.healthtrack.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="321dp"
        android:layout_height="476dp"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_layout">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="serif"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#c4c4c4"
            android:textSize="@dimen/app_name_size"
            app:layout_constraintEnd_toEndOf="@+id/button_login"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/button_login"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textViewType"
            android:layout_width="255dp"
            android:layout_height="62dp"
            android:layout_marginTop="132dp"
            android:fontFamily="serif"
            android:text="@string/textViewType"
            android:textColor="#c4c4c4"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/button_login"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/button_login"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="279dp"
            android:layout_height="52dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="212dp"
            android:background="@drawable/bg_button_register"
            android:text="@string/button_login"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewTitle" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="279dp"
            android:layout_height="52dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="280dp"
            android:background="@drawable/bg_button_register"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewTitle" />

        <Button
            android:id="@+id/button_info"
            android:layout_width="279dp"
            android:layout_height="52dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="348dp"
            android:background="@drawable/bg_button_register"
            android:text="@string/button_info"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewTitle" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>
