<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context="gr.unipi.healthtrack.Info">

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="651dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_layout"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/Info"
            android:layout_width="292dp"
            android:layout_height="54dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="serif"
            android:text="@string/app_name_info"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="30sp" />

        <TextView

            android:id="@+id/textViewInfo"
            android:layout_width="323dp"
            android:layout_height="61dp"
            android:layout_below="@+id/Info"
            android:layout_centerHorizontal="true"
            android:fontFamily="serif"
            android:text="@string/app_name_info1"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="18sp" />

        <TextView

            android:id="@+id/textViewChangelog"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info"
            android:layout_centerHorizontal="true"
            android:fontFamily="serif"
            android:text="@string/changelog"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/info"
            android:layout_width="323dp"
            android:layout_height="227dp"
            android:layout_below="@+id/textViewInfo"
            android:layout_centerHorizontal="true"
            android:text="@string/app_info"
            android:textColor="@color/colorText"
            android:textSize="14sp" />

        <RelativeLayout
            android:id="@+id/RelativeLayout"
            android:layout_width="358dp"
            android:layout_height="222dp"
            android:layout_below="@+id/textViewChangelog"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_edittext">

            <ListView
                android:id="@+id/listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">

            </ListView>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>