<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/anatomy_background"
    tools:context="gr.unipi.healthtrack.SymptomList">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#CC000000"
        android:padding="@dimen/default_padding">

        <RelativeLayout
            android:layout_width="339dp"
            android:layout_height="434dp"
            android:layout_alignBottom="@+id/button_add_symptoms"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="68dp"
            android:background="@drawable/rounded_edittext">

            <ListView
                android:id="@+id/listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp" />
        </RelativeLayout>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="397dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/rounded_edittext"></android.support.v7.widget.Toolbar>

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="326dp"
            android:layout_height="58dp"
            android:layout_alignBottom="@+id/toolbar"
            android:layout_alignStart="@+id/toolbar"
            android:background="@drawable/rounded_black"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textSize="22sp" />

        <TextView

            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"
            android:fontFamily="serif"
            android:text="@string/symptom_list"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="@dimen/app_name_size" />

        <Button
            android:id="@+id/button_add_symptoms"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/toolbar"
            android:layout_alignTop="@+id/button_remove_symptom"
            android:background="@drawable/bg_button_register"
            android:text="@string/add_symptom1"
            android:textAllCaps="false"
            android:textColor="@color/colorText" />

        <Button
            android:id="@+id/button_add_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/button_add_symptoms"
            android:layout_marginStart="137dp"
            android:background="@drawable/bg_button_register"
            android:text="@string/add_doctor"
            android:textAllCaps="false"
            android:textColor="@color/colorText" />

        <Button
            android:id="@+id/button_remove_symptom"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/toolbar"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dp"
            android:background="@drawable/bg_button_register"
            android:text="@string/remove_symptom"
            android:textAllCaps="false"
            android:textColor="@color/colorText" />


    </RelativeLayout>

</RelativeLayout>